# snc_events_wrapper

./: .gitignore  CMakeLists.txt  package.xml
config/: parameters.yaml
launch/: wrapper.launch
src/: wrapper.py
