<?xml version="1.0"?>
<package>
  <name>snc_events_wrapper</name>
  <version>0.0.0</version>
  <description>The snc_events_wrapper package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
